--- a/index.html
+++ b/index.html
@@ -99,11 +99,21 @@
 html, body {
   margin: 0;
   padding: 0;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   position: fixed;
   top: 0;
   left: 0;
 }
+
+textarea, input {
+  resize: none;
+  max-width: 100%;
+  max-height: 100%;
+  box-sizing: border-box; /* Ensure padding/margins don’t break layout */
+}
+
 
 .maplibregl-canvas {
   background-color: rgb(0, 0, 0) !important;
@@ -713,10 +723,6 @@ html, body {
   top: -1vh;
   right: 0;
 }
-
-textarea {
-      resize: none;
-    }
 
 .maplibregl-popup-tip {
   display: none !important; /* Hide anchor triangle */
@@ -1942,7 +1948,14 @@ window.addEventListener('load', () => {
   document.body.style.width = `${initialWidth}px`;
   document.body.style.height = `${initialHeight}px`;
 });
-
+const textarea = document.querySelector('textarea');
+textarea.addEventListener('focus', () => {
+  // Force viewport to stay fixed
+  document.querySelector('meta[name="viewport"]').setAttribute(
+    'content',
+    'width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no'
+  );
+});
       const APP_METADATA = {
         name: "PlanNet",
         description: "A Hashinals application using WalletConnect via Kiloscribe",
