--- a/index.html
+++ b/index.html
@@ -99,21 +99,11 @@
 html, body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
   overflow: hidden;
   position: fixed;
   top: 0;
   left: 0;
 }
-
-textarea, input {
-  resize: none;
-  max-width: 100%;
-  max-height: 100%;
-  box-sizing: border-box; /* Ensure padding/margins don’t break layout */
-}
-
 
 .maplibregl-canvas {
   background-color: rgb(0, 0, 0) !important;
@@ -1940,7 +1930,23 @@ button[type="submit"],
   </body>
 
     <script>
-      
+window.addEventListener('load', () => {
+  const initialWidth = window.innerWidth;
+  const initialHeight = window.innerHeight;
+  document.documentElement.style.width = `${initialWidth}px`;
+  document.documentElement.style.height = `${initialHeight}px`;
+  document.body.style.width = `${initialWidth}px`;
+  document.body.style.height = `${initialHeight}px`;
+});
+
+window.addEventListener('resize', () => {  
+  document.documentElement.style.width = `${initialWidth}px`;
+  document.documentElement.style.height = `${initialHeight}px`;
+  document.body.style.width = `${initialWidth}px`;
+  document.body.style.height = `${initialHeight}px`;
+});
+
+
       const APP_METADATA = {
         name: "PlanNet",
         description: "A Hashinals application using WalletConnect via Kiloscribe",
@@ -3918,17 +3924,16 @@ async function confirmNFTFunction(accountId) {
   }
 }
 
-const initialWidth = window.innerWidth;
-const initialHeight = window.innerHeight;
-
 const renderer = new THREE.WebGLRenderer({ alpha: true });
-renderer.setSize(initialWidth, initialHeight); // Use initial dimensions
+renderer.setSize(window.innerWidth, window.innerHeight);
 renderer.setPixelRatio(window.devicePixelRatio);
-document.getElementById("three-container").appendChild(renderer.domElement);
+document
+  .getElementById("three-container")
+  .appendChild(renderer.domElement);
 
 const camera = new THREE.PerspectiveCamera(
   45,
-  initialWidth / initialHeight, // Use initial dimensions for aspect ratio
+  window.innerWidth / window.innerHeight,
   0.1,
   1000
 );
