--- a/index.html
+++ b/index.html
@@ -977,6 +977,9 @@ button[type="submit"],
 <div id="upload-to-ipfs-column" style="display: none; position: absolute; z-index: 1002; top:10vh;">
   <div id="upload-to-ipfs-column-container" class="toolbar-containers" onclick="event.stopPropagation();">
 
+    <label for="fileInput" style="font-size: 2vh; padding: 0px;">Currentlly work in progress, once finished u will be able to upload imgs/videos/files
+    </label>
+
     <input type="file" class="toolbar-column" id="fileInput" />
     <button id="upload-to-ipfs-button" class="toolbar-column-btns">Upload to IPFS</button>
     <textarea class="toolbar-column" id="cid-output" placeholder="CID" readonly></textarea>
