--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
 <title>Meritocracy</title>
 
-<link rel="manifest" href="manifest.json">
 
 <div class="loader-container" id="loaderContainer">
   <div>
@@ -1900,30 +1899,10 @@ button[type="submit"],
 
     <script>
 
-self.addEventListener('install', (event) => {
-  event.waitUntil(
-    caches.open('v1').then((cache) => {
-      return cache.addAll([
-        '/',
-        '/index.html',
-        'https://kiloscribe.com/api/inscription-cdn/0.0.4819119'
-      ]);
-    })
-  );
-});
-
-self.addEventListener('fetch', (event) => {
-  event.respondWith(
-    caches.match(event.request).then((response) => {
-      return response || fetch(event.request);
-    })
-  );
-});
-
 
       const APP_METADATA = {
-        name: "PlanNet",
-        description: "A Hashinals application using WalletConnect via Kiloscribe",
+        name: "Meritocracy",
+        description: "A Hashinals application using WalletConnect via Kiloscribe.com",
         url: "https://kiloscribe.com/",
         icons: ["https://kiloscribe.com/api/inscription-cdn/0.0.4819119"],
       };
